changed fallback link

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       // 2) After a short delay, send to the App Store
       setTimeout(() => {
         // iOS App Store URL — replace YOUR_APPLE_ID
-        location.href = 'https://apps.apple.com/app/idYOUR_APPLE_ID';
+        location.href = 'https://www.battlebets.app';
       }, 1500);
 
       // 3) Show a manual fallback link
       document.addEventListener('DOMContentLoaded', () => {
         const a = document.getElementById('fallback');
-        a.href = 'https://apps.apple.com/app/idYOUR_APPLE_ID';
+        a.href = 'https://www.battlebets.app';
       });
     })();
   </script>
