added rich link image

--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Opening Battle Bets…</title>
+  <title>Join my Battle Bets League</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- Rich Link Tags -->
+  <meta property="og:type"        content="website" />
+  <meta property="og:title"       content="Join my Battle Bets League!" />
+  <meta property="og:description" content="The world's first app for simulated sports betting leagues. Fake money. Real fun." />
+  <meta property="og:image"       content="https://cdn.prod.website-files.com/6797de532bc3b2461a7039ff/6889824bd4161c300cd7753b_social-sharing.png" />
+  <meta property="og:url"         content="https://join.battlebets.app/join" />
   <script>
     (function() {
       const params = new URLSearchParams(location.search);
@@ -30,6 +37,6 @@
 </head>
 <body style="font-family:sans-serif; text-align:center; padding:2rem;">
   <h1>Opening Battle Bets…</h1>
-  <p>If nothing happens, <a id="fallback">download the app</a>.</p>
+  <p>If you are not redirected, <a id="fallback">download the app</a>.</p>
 </body>
 </html>
