added app store link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       // 2) After a short delay, send to the App Store
       setTimeout(() => {
         // iOS App Store URL — replace YOUR_APPLE_ID
-        location.href = 'https://www.battlebets.app';
+        location.href = 'https://apps.apple.com/us/app/battle-bets/id6738606749';
       }, 1500);
 
       // 3) Show a manual fallback link
