tweaked language of the screen

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 </head>
 <body>
   <div class="card">
-    <h1>Open Battle Bets</h1>
-    <p>We’ll open the app with your invite.</p>
+    <h1>Welcome to Battle Bets</h1>
+    <p>You've been invited to join a Battle Bets League.</p>
 
-    <a id="openBtn" class="btn btn-primary" href="#">Open Battle Bets</a>
+    <a id="openBtn" class="btn btn-primary" href="#">Join League (App Required)</a>
     <a id="downloadBtn" class="btn btn-ghost" href="#">Download Battle Bets</a>
 
     <div id="hint" class="warn">
-      If nothing happens, open this page in Safari, then tap <b>Open Battle Bets</b> again.
+      If nothing happens, visit this link in a browser, then tap <b>Open Battle Bets</b> again.
     </div>
 
-    <p class="muted">If you don’t have the app, the App Store will open.</p>
+    <p class="muted">If you don't have the app, you will not be able to join a league.</p>
   </div>
 
   <script>
