--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; background:#0b1420; color:#fff; margin:0; min-height:100dvh; display:grid; place-items:center; padding:24px; }
     .card { width:100%; max-width:560px; padding:24px; background:#132235; border-radius:16px; box-shadow:0 10px 30px rgba(0,0,0,.25) }
     h1 { margin:0 0 8px }
-    p { margin:8px 0 }
+    p  { margin:8px 0 }
     .btn { display:block; text-align:center; padding:14px 16px; border-radius:12px; text-decoration:none; font-weight:600; margin:12px 0 }
     .btn-primary { background:#3bd17f; color:#0b1420 }
-    .btn-ghost { background:transparent; border:1px solid #3bd17f; color:#3bd17f }
     .warn { background:#2b3a52; padding:10px 12px; border-radius:10px; margin-top:12px; font-size:14px; opacity:.95; display:none; }
     .muted { opacity:.8; font-size:14px }
+    .link-green { color:#3bd17f; text-decoration:none; font-weight:600; }
+    .link-green:hover { text-decoration:underline; }
   </style>
 </head>
 <body>
@@ -32,13 +33,12 @@
     <p>You've been invited to join a Battle Bets League.</p>
 
     <a id="openBtn" class="btn btn-primary" href="#">Join League (App Required)</a>
-    <a id="downloadBtn" class="btn btn-ghost" href="#">Download Battle Bets</a>
 
     <div id="hint" class="warn">
-      If nothing happens, visit this link in a browser, then tap <b>Open Battle Bets</b> again.
+      If nothing happens, open this page in Safari, then tap <b>Join League</b> again.
     </div>
 
-    <p class="muted">If you don't have the app, you will not be able to join a league.</p>
+    <p class="muted" style="margin-top:16px;">Need more info? <a class="link-green" href="https://battlebets.app" target="_blank" rel="noopener">battlebets.app</a></p>
   </div>
 
   <script>
@@ -50,15 +50,13 @@
       // Handoff target on the AASA host (allowed for Universal Links)
       const OPEN_UL = `https://aasa.battlebets.app/join?pool_id=${encodeURIComponent(pool)}&token=${encodeURIComponent(tok)}`;
 
-      const APP_STORE     = 'https://apps.apple.com/us/app/battle-bets/id6738606749';
-      const SITE_FALLBACK = 'https://battlebets.app';
-
       // Hostile in-app webviews often block deep linking
       const ua = navigator.userAgent.toLowerCase();
       const hostile = ua.includes('instagram') || ua.includes('snapchat') || ua.includes('fbav') || ua.includes('fbios') || ua.includes('tiktok');
       if (hostile) document.getElementById('hint').style.display = '';
 
-      // Open → hop to AASA host UL (iOS hands off to the app if installed)
+      // Join → hop to AASA host UL (iOS hands off to the app if installed;
+      // if not installed, your aasa host's 404 page will guide them to download)
       document.getElementById('openBtn').onclick = async function (e) {
         e.preventDefault();
         if (hostile) {
@@ -66,18 +64,6 @@
           try { await navigator.clipboard.writeText(OPEN_UL); } catch (_) {}
         }
         location.href = OPEN_UL;
-      };
-
-      // Download → App Store with website fallback
-      document.getElementById('downloadBtn').onclick = function (e) {
-        e.preventDefault();
-        const t = Date.now();
-        location.href = APP_STORE;
-        setTimeout(() => {
-          if (!document.hidden && Date.now() - t > 1100) {
-            location.href = SITE_FALLBACK;
-          }
-        }, 1200);
       };
     })();
   </script>
