actually final version of the join page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <div class="card">
     <h1>Welcome to Battle Bets</h1>
-    <p>You've been invited to join a Battle Bets League.</p>
+    <p>You've been invited to join a Battle Bets League. You will need the Battle Bets app installed before joining a league.</p>
 
     <a id="openBtn" class="btn btn-primary" href="#">Join League (App Required)</a>
     <a id="downloadBtn" class="btn btn-ghost" href="#">Download Battle Bets</a>
