tweaked join page

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       If nothing happens, open this page in Safari, then tap <b>Join League</b> again.
     </div>
 
-    <h3 style="margin-top:24px;">Use Web App</h3>
+    <h3 style="margin-top:32px;">Use Web App</h3>
     <p class="muted">No iPhone? You can use Battle Bets in your browser.</p>
-    <a id="webBtn" class="btn btn-primary" href="#">Join League on Web</a>
+    <a id="webBtn" class="btn btn-ghost" href="#">Join League on Web</a>
 
     <p class="muted" style="margin-top:16px;">
       Need more info? <a class="link-green" href="https://battlebets.app" target="_blank" rel="noopener">battlebets.app</a>
